--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,26 @@
 {
   "files.exclude": {
+    "**/.git": false,
+    "**/.svn": false,
+    "**/.hg": false,
+    "**/.DS_Store": false,
+    "**/Thumbs.db": false,
+    ".eslint*": false,
+    ".prettie*": false,
+    ".vscode": false,
+    "*.bat": false,
+    "*.md": false,
+    "*config*": false,
+    "*example*": false,
+    "*ignore*": false,
+    "*lock*": false,
+    "*node*": false,
+    "*uploads*": false,
+    "*winston*": false,
+    "dist": false,
+    "note": false
+  },
+  "explorerExclude.backup": {
     "**/.git": true,
     "**/.svn": true,
     "**/.hg": true,
@@ -19,6 +40,5 @@
     "*winston*": true,
     "dist": true,
     "note": true
-  },
-  "explorerExclude.backup": {}
+  }
 }
